[package]
name = "rust_graph"
version = "0.2.0"
authors = [
    "Zhengyi Yang <zyang@cse.unsw.edu.au>"
]
edition = "2018"

[features]
default = []
usize_id = []

[dependencies]
indexmap = { version = "1.4.0", features = ["serde-1"] }
serde = "1.0.114"
serde_derive = "1.0.114"
rand = "0.7.3"
itertools = "0.9.0"
bincode = "1.3.1"
log = "0.4.8"
csv = "1.1.3"
counter = "0.5.2"
fixedbitset = "0.3.0"
hashbrown = { version = "0.8.0", features = ["rayon","serde"] }
rayon = "1.3.1"
serde_json = "1.0.56"
fxhash = "0.2.1"

[dev-dependencies]
tempfile = "3.1.0"
